[package]
name = "cs1237"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A Rust Driver For The CS1237 ADC."

[dependencies]
cortex-m = "0.7.7"
embassy-stm32 = { version = "0.1.0", features = ["exti"] }
embassy-time = "0.3.2"

[dev-dependencies]
defmt = "0.3"

[features]
default = ["embassy-stm32/stm32f103c8"]