[package]
name = "cs1237"
version = "0.2.2"
edition = "2021"
license = "MPL-2.0"
description = "A Rust Driver For The CS1237 ADC."

[dependencies]
cortex-m = "0.7.7"
embassy-stm32 = { version = "0.1.0", features = ["exti"] }
embassy-time = "0.3.2"
defmt = { version = "0.3", optional = true }

[dev-dependencies]
defmt = "0.3"
embassy-stm32 = { version = "0.1.0", features = ["exti", "stm32f103c8"] }

[features]
default = []
defmt = ["dep:defmt"]